--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,21 +1,40 @@
+*{
+    padding: 0px;
+    margin:0px
+}
+
 .flex-rect{
     display: flex;
-    position: relative;
-    margin: 50%;
+    align-items: center;
     justify-content: center;
-    align-content: center;
+height: calc(100vh - 100px);
+    width: calc(100vw - 100px);
+
+}
+
+.flex-corner{
+    display: flex;
+    align-items: end;
+    justify-content: right;
+    height: 100vh;
+}
+
+.flex-full{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .rect{
-    width: 500px;
-    height: 250px;
+    width: 100px;
+    height: 100px;
     background-color: blue;
 }
 
-
 .circle{
-    width: 250px;
-    height: 250px;
+
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     background-color: deeppink;
 }
